[package]
name = "with_lock"
version = "0.3.1"
edition = "2021"
description = "Deadlock freedom"
documentation = "https://docs.rs/with_lock"
readme = "README.md"
repository = "https://github.com/Milo123459/with_lock"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
