[package]
name = "with_lock"
version = "0.5.4"
edition = "2018"
description = "Deadlock freedom"
documentation = "https://docs.rs/with_lock"
readme = "README.md"
repository = "https://github.com/Milo123459/with_lock"
license = "MIT"
include = ["src/lib.rs", "LICENSE", "README.md"]
rust-version = "1.54.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.0"
